# FPVWars

./: .gitignore
desktop/: CMakeLists.txt
desktop/src/: main.cpp  types.h
desktop/src/platform/: window.cpp  window.h
